--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="styles.css">
 
-        <title>Mini portfolio website - Bedimcode</title>
+        <title>Portfolio website Anastasija Labanova</title>
     </head>
     <body>
         <!--=============== HEADER PROFILE ===============-->
@@ -333,6 +333,6 @@
         <script src=""></script>
 
         <!--=============== MAIN JS ===============-->
-        <script src="assets/js/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
