--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                         </a>
 
-                        <a href="https://www.linkedin.com/" target="_blank" class="profile__social-link">
+                        <a href="https://www.linkedin.com/in/anastasija-labanova-9b428712b/" target="_blank" class="profile__social-link">
                             <i class="ri-linkedin-box-line"></i>
                             
                         </a>
