--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <div>
                                     <span class="projects__subtitle">Design</span>
                                     <h3 class="projects__title">Site web de cosmétiques bio</h3>
-                                    <a href="https://www.figma.com/file/mGRJOQRfptLBHyOGGs5CWe/AlhimDesign?type=design&node-id=697-3&t=WoqBGenGArepahYj-0" class="projects__button button button__small">
+                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=0-1&t=ChrrFMyBA4lFAJWv-0" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
