--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <!--=============== FOOTER ===============-->
         <footer class="footer container">
             <span class="footer__copy">
-                &#169; Anastasija Labanova. Tous droits résérvés.
+                &#169; Anastasija Labanova. Tous droits résérvés. <br> Les images proviennent de freepik.com
             </span>
             
         </footer>
