--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 </div>
                 <div class="profile__info grid">
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">1</h3>
+                        <h3 class="profile__info-number">Bilingue</h3>
                         <p class="profile__info-description">
-                            Year of <br> work
+                            Français <br> Russe
                         </p>
                     </div>
 
