--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                     <div class="profile__info-group">
                         <h3 class="profile__info-number">Bilingue</h3>
                         <p class="profile__info-description">
-                            Français <br> Russe
+                            Franco-Russe
                         </p>
                     </div>
 
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">2</h3>
+                        <h3 class="profile__info-number">Rigueur</h3>
                         <p class="profile__info-description">
-                            Completed <br> projects
+                            et organisation
                         </p>
                     </div>
 
                     <div class="profile__info-group">
-                        <h3 class="profile__info-number">3</h3>
+                        <h3 class="profile__info-number">Adaptabilité</h3>
                         <p class="profile__info-description">
-                            Satisfied <br> customers
+                            et sens du détail
                         </p>
                     </div>
                 </div>
