--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 <div>
                                     <span class="projects__subtitle">Design</span>
                                     <h3 class="projects__title">Site web pour un bar à vin à Bordeaux</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=7-4&t=ChrrFMyBA4lFAJWv-0" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
