--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 <div>
                                     <span class="projects__subtitle">Web</span>
                                     <h3 class="projects__title">Site web de voyage sur-mesure</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://ays-codeuses.github.io/Scandinave-Odyssey/" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
