--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <h3 class="profile__profession">Web-designer Junior</h3>
 
                     <ul class="profile__social">
-                        <a href="https://www.instagram.com/" target="_blank" class="profile__social-link">
-                            <i class="ri-instagram-line"></i>
+                        <a href="https://www.behance.net/anastaslabanov" target="_blank" class="profile__social-link">
+                            <i class="ri-behance-line"></i>
 
                         </a>
 
@@ -113,7 +113,7 @@
                                 <div>
                                     <span class="projects__subtitle">Design</span>
                                     <h3 class="projects__title">Site web de cosmétiques bio</h3>
-                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=0-1&t=ChrrFMyBA4lFAJWv-0" class="projects__button button button__small">
+                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=0-1&t=dTWEo3kNBMmWlgsR-0" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -128,7 +128,7 @@
                                 <div>
                                     <span class="projects__subtitle">Design</span>
                                     <h3 class="projects__title">Site web pour un bar à vin à Bordeaux</h3>
-                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=7-4&t=ChrrFMyBA4lFAJWv-0" class="projects__button button button__small">
+                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=7-4&t=dTWEo3kNBMmWlgsR-0" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -158,7 +158,7 @@
                                 <div>
                                     <span class="projects__subtitle">Design</span>
                                     <h3 class="projects__title">Réalisation de logo pour une brasserie artisanale</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=29-582&t=dTWEo3kNBMmWlgsR-0" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -251,24 +251,24 @@
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">Maîtrise des logiciels graphiques</h3>
-                                            <span class="skills__level">Adobe Creative Cloud dont Photoshop, Illustrator etc.</span>
+                                            <h3 class="skills__name">Gestion du temps</h3>
+                                            <span class="skills__level"Planification efficace des tâches, respect des échéances</span>
                                         </div>
                                     </div>
 
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">Notions d'UX / UI</h3>
-                                            <span class="skills__level">Réalisation des maquettes et prototypes de sites web sur Figma</span>
+                                            <h3 class="skills__name">Esprit d'équipe</h3>
+                                            <span class="skills__level">Capacité de collaborer efficacement avec différents interlocuteurs</span>
                                         </div>
                                     </div>
 
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">Connaissances de langages front-end</h3>
-                                            <span class="skills__level">Maitrise des bases HTML, CSS et notions en JavaScript</span>
+                                            <h3 class="skills__name">Minutie</h3>
+                                            <span class="skills__level">Travail avec précision et attention aux détails</span>
                                         </div>
                                     </div>
 
@@ -279,24 +279,24 @@
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">Marketing</h3>
-                                            <span class="skills__level">Connaissances en communication et marketing</span>
+                                            <h3 class="skills__name">Curiosité</h3>
+                                            <span class="skills__level">Veille technologique et artistique pour détecter les nouvelles tendances</span>
                                         </div>
                                     </div>
 
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">Maitrise des outils CMS</h3>
-                                            <span class="skills__level">Notions d'utilisation de WordPress</span>
+                                            <h3 class="skills__name">Adaptabilité</h3>
+                                            <span class="skills__level">Ouverture à de nouveaux défis et insertion rapide dans un nouvel environnement</span>
                                         </div>
                                     </div>
 
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">SEO</h3>
-                                            <span class="skills__level">Notions de référencement et analytics</span>
+                                            <h3 class="skills__name">Esprit critique</h3>
+                                            <span class="skills__level">Identification et analyse d'un problème puis recherche de solutions pour le résoudre</span>
                                         </div>
                                     </div>
 
