--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
                                             <h3 class="skills__name">Gestion du temps</h3>
-                                            <span class="skills__level"Planification efficace des tâches, respect des échéances</span>
+                                            <span class="skills__level">Planification efficace des tâches, respect des échéances</span>
                                         </div>
                                     </div>
 
