--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                 <div class="profile__buttons">
                     <!--Inserer mon CV-->
-                    <a download="" href="Mon CV.pdf" class="button">
+                    <a download="" href="CV AL_compressed.pdf" class="button">
                         Télécharger mon CV <i class="ri-file-download-line"></i>
                     </a>
 
