--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">Design</span>
-                                    <h3 class="projects__title">Réalisation de logo pour une brasserie artisanale</h3>
-                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=29-582&t=dTWEo3kNBMmWlgsR-0" class="projects__button button button__small">
+                                    <h3 class="projects__title">Réalisation de logo pour une boutique de robes de mariée</h3>
+                                    <a href="https://www.figma.com/file/iEqA9hkc3HUSMDPKkteqXV/Portfolio-Anastasija?type=design&node-id=89-2&t=oWFaT5HQSKQiTcMo-0" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                     </a>
                                 </div>
